fix for bug #27295.  don't listen for the drag_leave signal.  the problem was that the drag_leave signal was getting sent before the drag_drop signal causing the state machine in the tree widget to set tree elements as invalid drag targets.  we aren't using the drag_leave signal for anything anyway so this isn't hurting anything.  this gets drags working to mail folders and folders in the bookmark windows.